hphp/test/slow/parser/async_bad_class.php.expectf

Fatal error: The 'async' annotation cannot be used on 'abstract' methods or methods inside of interfaces. in %s/async_bad_class.php on line 3
